switch from onclick to hash changes
restructured questions.json as hash, not array; renamed option targets;
load questions based on hashchange rather than button click

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ layout: default
 
 <div class="home">
 
-  <a href="#"><h1 class="page-heading">CAUTI Surveillance Worksheet</h1></a>
+  <a href="{{ site.baseurl }}/"><h1 class="page-heading">CAUTI Surveillance Worksheet</h1></a>
 
   <div id="question_block"></div>
-  <a href="#"><p id="start_over">Start over.</p></a>
+  <a href="#start"><p id="start_over">Start over.</p></a>
 
 </div>
