back to one q at a time
plus some renaming, cleanup and fadeIn() action

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ layout: default
   <a href="{{ site.baseurl }}/"><h1 class="page-heading">CAUTI Surveillance Worksheet</h1></a>
 
   <div id="question_block"></div>
-  <div><p id="start_over"><a href="#start">Start over.</a></p></div>
+  <!-- <div><p id="start_over"><a href="#start">Start over.</a></p></div> -->
 
 </div>
