--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@ layout: default
 
   <a href="{{ site.baseurl }}/"><h1 class="page-heading">CAUTI Surveillance Worksheet</h1></a>
 
+  <div id="body_wrapper">
   <div id="question_block"></div>
   <!-- <div><p id="start_over"><a href="#start">Start over.</a></p></div> -->
+  <div id="more_block">
+    <a id="more_link">More ▼</a>
+    <a id="less_link">Less ▲</a>
+      <div id="more_text"></div>
+  </div>
+  </div>
 
 </div>
